--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ chrono = { version = "0.4.22", features = ["serde"] }
 now = "0.1.2"
 time = "0.3.13"
 md5 = "0.7.0"
-reqwest = "0.11.11"
-actix-http = "3.2.1"
-actix-web = "4.1.0"
+ureq = "2.5.0"
+actix-http = { version = "3.2.1", features = ["rustls"] }
+actix-web = { version = "4.1.0", features = ["rustls"] }
 actix-files = "0.6.2"
 evmap = "10.0.2"
 clokwerk = "0.3.5"
@@ -32,13 +32,12 @@ cacache = "10.0.1"
 rand = "0.8.5"
 log = "0.4.17"
 mime_guess = "2.0.4"
-openssl = { version = "0.10.41", features = ["vendored"] }
 
 [dev-dependencies]
 assertor = "0.0.1"
 pretty_assertions = "1.2.1"
 actix-rt = "2.7.0"
-reqwest = { version = "0.11.11", features = ["blocking"] }
+ureq = "2.5.0"
 
 # Strip debug symbols in release mode
 [profile.release]
