--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -135,46 +135,19 @@ jobs:
     name: Build container image
     needs: [ check-oci-config, check-repo, check-code-style, check-code, test ]
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        target-platform: [ x86_64-unknown-linux-musl, aarch64-unknown-linux-musl, armv7-unknown-linux-musleabi ]
-        include:
-          - target-platform: x86_64-unknown-linux-musl
-            container-image-arch: amd64
-          - target-platform: aarch64-unknown-linux-musl
-            container-image-arch: arm64
-          - target-platform: armv7-unknown-linux-musleabi
-            container-image-arch: arm/v7
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: default
-          toolchain: stable
-          target: x86_64-unknown-linux-musl
-
-      - uses: Swatinem/rust-cache@v2 # use rust / cargo caching
-        with:
-          cache-on-failure: "true"
-
-      - name: Prepare cross build environment
-        run: cargo install cross --git https://github.com/cross-rs/cross
-
-      - name: Build application
-        run: cross build --release --target ${{ matrix.target-platform }}
+      - name: Set up QEMU
+        run: sudo apt install -y qemu-user-static
 
       - name: Build container image
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ env.IMAGE_NAME }}
           tags: ${{ env.TAG }}
-          platforms: ${{ matrix.container-image-arch }}
-          args: |
-            TARGET_PLATFORM=${{ matrix.target-platform }}
+          archs: amd64,arm64,arm
           containerfiles: |
             ./Containerfile
           oci: true
@@ -185,7 +158,7 @@ jobs:
       - name: Upload container image
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.container-image-arch }}
+          name: image
           path: image.tar
 
   scan-container-image:
