--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -144,20 +144,33 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up QEMU
-        run: sudo apt install -y qemu-user-static
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/${{ matrix.container-image-arch }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Build container image
-        uses: redhat-actions/buildah-build@v2
+        uses: docker/build-push-action@v3
         with:
-          image: ${{ env.IMAGE_NAME }}
-          tags: ${{ env.TAG }}
-          archs: ${{ matrix.container-image-arch }}
-          containerfiles: |
-            ./Containerfile
-          oci: true
+          file: Containerfile
+          tags: ${{ env.IMAGE_NAME }}:${{ env.TAG }}
+          platforms: linux/${{ matrix.container-image-arch }}
+          outputs: type=oci,dest=image.tar
 
-      - name: Save container image
-        run: podman save -o image.tar ${{ env.IMAGE_NAME }}:${{ env.TAG }}
+      #      - name: Build container image
+      #        uses: redhat-actions/buildah-build@v2
+      #        with:
+      #          image: ${{ env.IMAGE_NAME }}
+      #          tags: ${{ env.TAG }}
+      #          archs: ${{ matrix.container-image-arch }}
+      #          containerfiles: |
+      #            ./Containerfile
+      #          oci: true
+      #
+      #      - name: Save container image
+      #        run: podman save -o image.tar ${{ env.IMAGE_NAME }}:${{ env.TAG }}
 
       - name: Upload container image
         uses: actions/upload-artifact@v3
