fix: alpine build

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -138,7 +138,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        container-image-arch: [ amd64, arm64, arm ]
+        container-image-arch: [ amd64, arm64 ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -234,17 +234,11 @@ jobs:
         with:
           name: arm64
           path: .
-      - name: Download arm Container Image
-        uses: actions/download-artifact@v3
-        with:
-          name: arm
-          path: .
 
       - name: Restore container images
         run: | 
           podman load --input amd64.tar
           podman load --input arm64.tar
-          podman load --input arm.tar
 
       - name: Create container image manifest
         run: buildah manifest create multiarch-manifest
@@ -253,7 +247,6 @@ jobs:
         run: | 
           buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_amd64
           buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_arm64
-          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_arm
 
       - name: Login to docker hub
         run: podman login docker.io --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_PASSWORD }}
