feat: implement generic resource reader

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ cacache = "10.0.1"
 rand = "0.8.5"
 log = "0.4.17"
 mime_guess = "2.0.4"
-pavao = "0.1.2"
+pavao = { path = "/home/rouven/github/pavao" }
 
 [dev-dependencies]
 assertor = "0.0.1"
