fix(pipe): install missing pavao dependencies

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -52,6 +52,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install required dependencies
+        run: apt install -y libsmbclient-dev libsmbclient
+
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -71,6 +74,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Install required dependencies
+        run: apt install -y libsmbclient-dev libsmbclient
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -95,6 +101,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install required dependencies
+        run: apt install -y libsmbclient-dev libsmbclient
+
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -114,6 +123,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Install required dependencies
+        run: apt install -y libsmbclient-dev libsmbclient
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -142,6 +154,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Install required dependencies
+        run: apt install -y libsmbclient-dev libsmbclient
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
