--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ rand = "0.8.5"
 log = "0.4.17"
 mime_guess = "2.0.4"
 pavao = "0.1.2"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.21.0"
 
 [dev-dependencies]
 assertor = "0.0.1"
