--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,11 @@ assertor = "0.0.1"
 pretty_assertions = "1.3.0"
 actix-rt = "2.7.0"
 ureq = "2.5.0"
+criterion = "0.4.0"
+
+[[bench]]
+name = "benchmarks"
+harness = false
 
 [profile.release]
 panic = "abort" # Strip expensive panic clean-up logic
