feat(hide): cleanup and use better hide icon

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ rayon = "1.5.3"
 regex = "1.6.0"
 image = "0.24.4"
 log = "0.4.17"
+rand = "0.8.5"
 mime_guess = "2.0.4"
 pavao = "0.1.2"
 r2d2 = "0.8.10"
