--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,12 @@ rayon = "1.5.3"
 regex = "1.6.0"
 image = "0.24.4"
 log = "0.4.17"
+env_logger = "0.9.0"
 rand = "0.8.5"
 mime_guess = "2.0.4"
 pavao = "0.1.2"
 r2d2 = "0.8.10"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
 r2d2_sqlite = "0.21.0"
 
 [dev-dependencies]
@@ -39,11 +41,6 @@ assertor = "0.0.1"
 pretty_assertions = "1.3.0"
 actix-rt = "2.7.0"
 ureq = "2.5.0"
-criterion = "0.4.0"
-
-[[bench]]
-name = "benchmarks"
-harness = false
 
 [profile.release]
 panic = "abort" # Strip expensive panic clean-up logic
