--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -17,7 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set image tag global
-        run: env
+        run: |
+          GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
+          echo "GIT_BRANCH=$GIT_BRANCH"
+          if [ $GIT_BRANCH = "main"  ]; then export TEST_IMAGE_TAG=latest; else export TEST_IMAGE_TAG=next; fi
+          echo "TEST_IMAGE_TAG=$TEST_IMAGE_TAG"
 
   check-oci-config:
     name: Check Containerfile
