--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -18,11 +18,9 @@ jobs:
       - name: Set image tag global
         run: |
           GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
-          echo "GIT_BRANCH=$GIT_BRANCH"
           if [ $GIT_BRANCH = "main" ]; then export TAG=latest; else export TAG=next; fi
+          echo "Current branch: GIT_BRANCH=$GIT_BRANCH leads to the container image tag: $TAG"
           echo "IMAGE_TAG=$TAG" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$IMAGE_TAG"
-          env
 
   check-oci-config:
     name: Check Containerfile
@@ -157,7 +155,7 @@ jobs:
 
   build-container-image:
     name: Build container image
-    needs: [ check-oci-config, check-repo, check-code-style, check-code, test ]
+    needs: [ set-image_tag, check-oci-config, check-repo, check-code-style, check-code, test ]
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
