--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -276,6 +276,7 @@ jobs:
         run: buildah manifest push --all multiarch-manifest docker://docker.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
       - name: Update docker hub description
+        if: github.ref_name == 'main' # only push the image if the branch is main
         uses: peter-evans/dockerhub-description@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
