--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -53,13 +53,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install required dependencies
-        run: sudo apt install -y libsmbclient-dev libsmbclient
+        run: sudo apt update && sudo apt install -y libsmbclient-dev libsmbclient
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
+          components: rustfmt
 
       - uses: Swatinem/rust-cache@v2 # use rust / cargo caching
         with:
@@ -76,13 +77,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install required dependencies
-        run: sudo apt install -y libsmbclient-dev libsmbclient
+        run: sudo apt update && sudo apt install -y libsmbclient-dev libsmbclient
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
+          components: clippy
 
       - uses: Swatinem/rust-cache@v2 # use rust / cargo caching
         with:
@@ -102,7 +104,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install required dependencies
-        run: sudo apt install -y libsmbclient-dev libsmbclient
+        run: sudo apt update && sudo apt install -y libsmbclient-dev libsmbclient
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -125,7 +127,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install required dependencies
-        run: sudo apt install -y libsmbclient-dev libsmbclient
+        run: sudo apt update && sudo apt install -y libsmbclient-dev libsmbclient
 
       - name: Install rust toolchain
         uses: actions-rs/toolchain@v1
@@ -144,142 +146,55 @@ jobs:
         run: cargo +nightly udeps
 
   build-container-image:
-    name: Build container image
+    name: Build, test and push container image
     needs: [ check-oci-config, check-repo, check-code-style, check-code, test ]
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        container-image-arch: [ amd64, arm64, arm ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install required dependencies
-        run: sudo apt install -y libsmbclient-dev libsmbclient
+        run: sudo apt update && sudo apt install -y libsmbclient-dev libsmbclient
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: ${{ matrix.container-image-arch }}
+          platforms: linux/amd64, linux/arm64, linux/arm/v7
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build container image
-        uses: redhat-actions/buildah-build@v2
+        uses: docker/build-push-action@v3
         with:
-          image: ${{ env.IMAGE_NAME }}
-          tags: ${{ env.IMAGE_TAG }}_${{ matrix.container-image-arch }}
-          oci: true
-          archs: ${{ matrix.container-image-arch }}
-          containerfiles: |
-            ./Containerfile
-
-      - name: Save container image
-        run: podman save -o ${{ matrix.container-image-arch }}.tar ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_${{ matrix.container-image-arch }}
-
-      - name: Upload container image
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.container-image-arch }}
-          path: ${{ matrix.container-image-arch }}.tar
-
-  scan-container-image:
-    name: Scan container for vulnerabilities
-    needs: build-container-image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Container Image
-        uses: actions/download-artifact@v3
-        with:
-          name: amd64
-          path: .
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: image
-          input: amd64.tar
-          format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
-          severity: 'CRITICAL,HIGH'
-
-  test-container-image:
-    name: Test container image
-    needs: build-container-image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Container Image
-        uses: actions/download-artifact@v3
-        with:
-          name: amd64
-          path: .
-
-      - name: Restore container image
-        run: podman load --input amd64.tar
+          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_${{ matrix.container-image-arch }}
+          platforms: linux/amd64, linux/arm64, linux/arm/v7
+          file: ./Containerfile
+          load: true
+          push: false
 
       - name: Prepare test env
         run: |
           mkdir -p /tmp/test
-          wget https://raw.githubusercontent.com/ianare/exif-samples/master/jpg/gps/DSCN0010.jpg -O /tmp/test/DSCN0010.jpg          
-
+          wget https://raw.githubusercontent.com/ianare/exif-samples/master/jpg/gps/DSCN0010.jpg -O /tmp/test/DSCN0010.jpg
       - name: Start test container
-        run: podman run -d --name test-container -p 8080:8080 -v /tmp/test:/resources rouhim/this-week-in-past:latest
-
+        run: docker run --pull never -d --name test-container -p 8080:8080 -v /tmp/test:/resources rouhim/this-week-in-past:latest
       - name: Test container web api
         run: wget -q -O /dev/null --timeout 5 --tries 3 http://localhost:8080/api/health
-
       - name: Cleanup
-        run: podman kill test-container && podman rm test-container
+        run: docker kill test-container && docker rm test-container
 
-  push-container:
-    name: Push container image
-    needs: [ scan-container-image, test-container-image ]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Download amd64 Container Image
-        uses: actions/download-artifact@v3
+      - name: Push container image
+        uses: docker/build-push-action@v3
         with:
-          name: amd64
-          path: .
-      - name: Download arm64 Container Image
-        uses: actions/download-artifact@v3
-        with:
-          name: arm64
-          path: .
-      - name: Download arm Container Image
-        uses: actions/download-artifact@v3
-        with:
-          name: arm
-          path: .
-
-      - name: Restore container images
-        run: |
-          podman load --input amd64.tar
-          podman load --input arm64.tar
-          podman load --input arm.tar
-
-      - name: Create container image manifest
-        run: buildah manifest create multiarch-manifest
-
-      - name: Add all architectures to the manifest
-        run: |
-          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_amd64
-          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_arm64
-          buildah manifest add multiarch-manifest ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_arm
-
-      - name: Login to docker hub
-        run: podman login docker.io --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Push multiarch manifest to docker hub
-        run: buildah manifest push --all multiarch-manifest docker://docker.io/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-
-      - name: Update docker hub description
-        if: github.ref_name == 'main' # only push the image if the branch is main
-        uses: peter-evans/dockerhub-description@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: ${{ env.IMAGE_NAME }}
+          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_${{ matrix.container-image-arch }}
+          platforms: linux/amd64, linux/arm64, linux/arm/v7
+          file: ./Containerfile
+          load: false
+          push: true
