--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -170,15 +170,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build container image
-        uses: docker/build-push-action@v3
-        with:
-          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_${{ matrix.container-image-arch }}
-          platforms: linux/amd64, linux/arm64, linux/arm/v7
-          file: ./Containerfile
-          load: true
-          push: false
-
       - name: Load x86 image into local repo
         uses: docker/build-push-action@v3
         with:
@@ -198,7 +189,7 @@ jobs:
       - name: Cleanup
         run: docker kill test-container && docker rm test-container
 
-      - name: Push container image
+      - name: Build and push multi platform container image
         uses: docker/build-push-action@v3
         with:
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}_${{ matrix.container-image-arch }}
