--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -159,7 +159,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: linux/amd64, linux/arm64, linux/arm/v7
+          platforms: linux/amd64, linux/arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -195,7 +195,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-          platforms: linux/amd64, linux/arm64, linux/arm/v7
+          platforms: linux/amd64, linux/arm64
           file: ./Containerfile
           load: false
           push: true
