feat(pipe): Use github actions cache

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -177,8 +177,8 @@ jobs:
           file: ./Containerfile
           load: true
           push: false
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Prepare test env
         run: |
@@ -199,5 +199,5 @@ jobs:
           file: ./Containerfile
           load: false
           push: true
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
