--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -156,8 +156,6 @@ jobs:
           build-rust-static-bin x86_64-musl
           build-rust-static-bin aarch64-musl
           build-rust-static-bin armv7-musleabihf
-          pwd
-          ls -lsha target
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -172,6 +170,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          context: .
           file: ./Containerfile
           load: true
           push: false
