fix(pipeline): fix copy command

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -174,8 +174,8 @@ jobs:
           file: ./Containerfile
           load: true
           push: false
-#          cache-from: type=gha
-#          cache-to: type=gha,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Prepare test env
         run: |
