--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -8,7 +8,8 @@ on:
 
 env:
   IMAGE_NAME: rouhim/this-week-in-past
-  IMAGE_TAG: "${{ github.ref == 'refs/heads/main' && 'latest' || 'next' }}"
+  # Use branch name as image tag, replace invalid chars. For main branch use 'latest'.
+  IMAGE_TAG: ${{ github.ref_name == 'main' && 'latest' || github.ref_name }}
 
 jobs:
 
@@ -29,6 +30,7 @@ jobs:
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
 
+
   check-repo:
     name: Check git repository
     runs-on: ubuntu-latest
@@ -44,6 +46,7 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
+
 
   check-code-style:
     name: Check code style
@@ -66,6 +69,7 @@ jobs:
       - name: Check the code style
         run: cargo fmt --all -- --check
 
+
   check-code:
     name: Check rust code
     runs-on: ubuntu-latest
@@ -86,6 +90,7 @@ jobs:
 
       - name: Verify code
         run: cargo clippy
+
 
   test:
     name: Run application tests
@@ -110,6 +115,7 @@ jobs:
       - name: Test code
         run: cargo test
 
+
   check-unused-dependencies:
     name: Check for unused deps
     runs-on: ubuntu-latest
@@ -133,7 +139,8 @@ jobs:
       - name: Analyze dependencies
         run: cargo +nightly udeps
 
-  build-container-image:
+
+  build-binaries:
     name: Build, test and push container image
     needs: [ check-oci-config, check-repo, check-code-style, check-code, test ]
     runs-on: ubuntu-latest
@@ -164,16 +171,30 @@ jobs:
           # Cleanup target folder
           sudo rm -rf target/*/release/build target/*/release/deps 
 
+      - name: Upload static application binaries
+        uses: actions/upload-artifact@v2
+        with:
+          name: binaries
+          path: target
+
+
+  test-container-image:
+    name: Test container image
+    needs: [ build-binaries ]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download static application binaries
+        uses: actions/download-artifact@v2
+        with:
+          name: binaries
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Load x86 image into local repo
+      - name: Build x86 image and load into local repo
         uses: docker/build-push-action@v3
         with:
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
@@ -188,17 +209,109 @@ jobs:
         run: |
           mkdir -p /tmp/test
           wget https://raw.githubusercontent.com/ianare/exif-samples/master/jpg/gps/DSCN0010.jpg -O /tmp/test/DSCN0010.jpg
+
       - name: Start test container
         run: docker run --pull never -d --name test-container -p 8080:8080 -v /tmp/test:/resources ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+
       - name: Test container web api
         run: wget -q -O /dev/null --timeout 5 --tries 3 http://localhost:8080/api/health
+
       - name: Cleanup
         run: docker kill test-container && docker rm test-container
+
+
+  release-artifacts:
+    name: Release artifacts
+    needs: [ test-container-image ]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download static application binaries
+        uses: actions/download-artifact@v2
+        with:
+          name: binaries
+
+      # Create a new release based on semantic versioning
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 12.x
+
+      - name: Install Dependencies
+        run: |
+          npm install -D semantic-release @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/changelog @semantic-release/npm @semantic-release/git @semantic-release/github
+
+      - name: Generate Semantic Release Notes and Create Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        run: npx semantic-release
+
+      - name: Upload the x86 built binaries to the release
+        uses: actions/upload-release-asset@v1
+        if: github.ref == 'refs/heads/main'
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./target/x86_64-unknown-linux-musl/release/this-week-in-past
+          asset_name: this-week-in-past-x86_64-unknown-linux-musl
+          asset_content_type: application/x-executable
+
+      - name: Upload the aarch64 built binaries to the release
+        uses: actions/upload-release-asset@v1
+        if: github.ref == 'refs/heads/main'
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./target/aarch64-unknown-linux-musl/release/this-week-in-past
+          asset_name: this-week-in-past-aarch64-unknown-linux-musl
+          asset_content_type: application/x-executable
+
+      - name: Upload the armv7 built binaries to the release
+        uses: actions/upload-release-asset@v1
+        if: github.ref == 'refs/heads/main'
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./target/armv7-unknown-linux-musleabihf/release/this-week-in-past
+          asset_name: this-week-in-past-armv7-unknown-linux-musleabihf
+          asset_content_type: application/x-executable
+
+      - name: Upload the arm v6 built binaries to the release
+        uses: actions/upload-release-asset@v1
+        if: github.ref == 'refs/heads/main'
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./target/arm-unknown-linux-musleabihf/release/this-week-in-past
+          asset_name: this-week-in-past-arm-unknown-linux-musleabihf
+          asset_content_type: application/x-executable
+
+
+  publish-container-images:
+    name: Publish container images
+    needs: [ test-container-image ]
+    runs-on: ubuntu-latest
+    if: github.ref_name == 'main' || startsWith(github.ref_name, 'fix/') || startsWith(github.ref_name, 'feat/')
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download static application binaries
+        uses: actions/download-artifact@v2
+        with:
+          name: binaries
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push multi platform container image
         uses: docker/build-push-action@v3
         # Only if branch is main fix or feature
-        if: github.ref_name == 'main' || startsWith(github.ref_name, 'fix/') || startsWith(github.ref_name, 'feat/')
         with:
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
           platforms: linux/amd64, linux/arm64/v8, linux/arm/v7, linux/arm/v6
